image of unity should work now

--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-
-# ISOREPO - MY ISO STORAGE
-
-
-### __I am making a UbuntuKytka (Gnome enviroment flavour) i will soon post iso but use it only in VM thanks. -Kytka__
-### I will be happy if you support with sending messages and tell me what should i fix
-## NEW UBUNTU FLAVOUR:
-[21.10 based .iso ](http://linux.darkpenguin.net/distros/ubuntu-unity/21.10/ubuntu-unity-21.10.iso)
-<img src="https://github.com/kytkaprogramuje/isorepo/blob/gh-pages/Sn%C3%ADmek%20obrazovky%20po%C5%99%C3%ADzen%C3%BD%202022-03-20%2010-48-13.png" />
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -22,6 +12,6 @@
 
   <h2>NEW UBUNTU FLAVOUR:</h2>
 <a href="http://linux.darkpenguin.net/distros/ubuntu-unity/21.10/ubuntu-unity-21.10.iso">21.10 Impish Idiri Based .iso file</a>
-  <img src="https://github.com/kytkaprogramuje/isorepo/blob/gh-pages/Sn%C3%ADmek%20obrazovky%20po%C5%99%C3%ADzen%C3%BD%202022-03-20%2010-48-13.png" alt="ubuntuunity">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/Ubuntu_Unity_21.10_default_desktop.png/300px-Ubuntu_Unity_21.10_default_desktop.png" alt="ubuntuunity">
   </body>
 </html>
