--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 </head>
 <body>
 
-<h6>ISOREPO - MY ISO STORAGE</h6>
+<h1>ISOREPO - MY ISO STORAGE</h1>
 
   <p>I am making a UbuntuKytka (Gnome enviroment flavour) i will soon post iso but use it only in VM thanks. -Kytka </p>
 <p>I will be happy if you support with sending messages and tell me what should i fix</p>
 
-  <h2>NEW UBUNTU FLAVOUR:</h2>
+  <h4>NEW UBUNTU FLAVOUR (UbuntuUnity):</h4>
 <a href="http://linux.darkpenguin.net/distros/ubuntu-unity/21.10/ubuntu-unity-21.10.iso">21.10 Impish Idiri Based .iso file</a> </p>
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/Ubuntu_Unity_21.10_default_desktop.png/300px-Ubuntu_Unity_21.10_default_desktop.png" alt="ubuntuunity">
+  <p>Ubuntu based distro with revival of unity. Its also distro that i currently use.</p>
   </body>
 </html>
