--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
 <a href="http://linux.darkpenguin.net/distros/ubuntu-unity/21.10/ubuntu-unity-21.10.iso">21.10 Impish Idiri Based .iso file</a> </p>
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/Ubuntu_Unity_21.10_default_desktop.png/300px-Ubuntu_Unity_21.10_default_desktop.png" alt="ubuntuunity">
   <p>Ubuntu based distro with revival of unity. Its also distro that i currently use.</p>
+<p> </p>
+<p> </p>
+<p> </p>
+<p>Warning this site is still in progress of designing sorry about some errors you encounter here. thanks Jakub </p>
   </body>
 </html>
